Added button to generate test data using setValue

--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -191,6 +191,13 @@
                                 Save
                             </button>
                         </span>
+                        <span>
+                            <button class="btn btn-primary"
+                                    type="button"
+                                    (click)="populateTestData()">
+                                Test Data
+                            </button>
+                        </span>
                     </div>
                 </div>
             </fieldset>
