--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -78,7 +78,7 @@
                         </span>
                     </div>
                 </div>
-                
+
                 <div class="form-group"
                     [ngClass]="{'has-error': !customerForm.get('phone').valid }">
                     <label class="col-md-2 control-label" 
@@ -114,7 +114,29 @@
                                        (click)="setNotification('text')">Text
                             </label>
                     </div>
-                </div>                
+                </div> 
+                
+                <div class="form-group"
+                    [ngClass]="{'has-error': (customerForm.get('rating').touched || 
+                                              customerForm.get('rating').dirty) && 
+                                              !customerForm.get('rating').valid }">
+                    <label class="col-md-2 control-label" 
+                        for="ratingId">Rating</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="ratingId" 
+                               type="number" 
+                               formControlName = "rating" />
+                        <span class="help-block" *ngIf="(customerForm.get('rating').touched 
+                                                         || customerForm.get('rating').dirty) && 
+                                                         customerForm.get('rating').errors">
+                             <span *ngIf="customerForm.get('rating').errors.range">
+                                Please rate your experience from 1 to 5.
+                            </span>
+                       </span>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <div class="col-md-offset-1 col-md-8 checkbox" >
