--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -163,6 +163,19 @@
                 </div>
                 
                 <div *ngIf="customerForm.get('sendCatalog').value">
+                    <div class="form-group">
+                        <div class="col-md-4 col-md-offset-2">
+                            <span>
+                                <button class="btn btn-primary"
+                                        type="button"
+		                                [disabled]="!addresses.valid"
+                                        (click)="addAddress()">
+                                    Add Another Address
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+
                     <div formArrayName="addresses" *ngFor="let address of addresses.controls; let i=index">
                         <div [formGroupName]="i">
                             <div class="form-group" >
@@ -272,3 +285,5 @@
 <br>Touched: {{ customerForm.touched }}
 <br>Valid: {{ customerForm.valid }}
 <br>Value: {{ customerForm.value | json }}
+<br>Street: {{ addresses.get('0.street1')?.value}}
+<br>&nbsp;
